Add content output depending on user status
HTML: The content on the page about expenses,
income and statistics is displayed
only if the user is logged in

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -17,6 +17,9 @@
         <button type="submit" class="btn btn btn-success">Подтвердить</button>
         <p style="margin-top: 0.5rem; color: {% if data == 'Успешно' %} #38b000  {% else %} #ba181b{% endif %}"> {{data}}</p>
     </form>
+    {% if request.user.is_authenticated %}
+        Вы уже авторизованы
+    {% endif %}
 </div>
 {% endblock content%}
 
