Add edited password recovery forms.
The forms for password change methods have been changed.
HTML pages are also edited

--- a/account/static/css/reg_style.css
+++ b/account/static/css/reg_style.css
@@ -19,6 +19,12 @@ body {
     height: 80vh;
 }
 
+.content>div{
+    margin-top: 1rem;
+    grid-row: 3/6;
+    grid-column: 2/3;
+}
+
 .header {
     font-size: 1.7rem;
     display: flex;
