--- a/account/templates/registration/password_reset_complete.html
+++ b/account/templates/registration/password_reset_complete.html
@@ -1,8 +1,13 @@
 {% extends "account/pattern.html" %}
 
-{% block title %}Password reset{% endblock %}
 
 {% block content %}
-    <h1>Password set</h1>
-    <p>Your password has been set. You can <a href="127.0.0.1:8000/account/login/">log in now</a></p>
+<div>
+    <p style="font-size: 1.5rem">Пароль установлен</p>
+    <p>Ваш пароль обновлен, можете перейти по ссылке для авторизации:</p>
+    <a style="margin-bottom: 2rem" href='http://127.0.0.1:8000/account/logout/'>
+        <button type="button" class="btn btn-outline-danger">Выйти из аккаунта</button>
+    </a>
+</div>
+
 {% endblock %}
