--- a/account/templates/registration/password_reset_confirm.html
+++ b/account/templates/registration/password_reset_confirm.html
@@ -1,18 +1,18 @@
 {% extends "account/pattern.html" %}
 
-{% block title %}Reset your password{% endblock %}
-
 {% block content %}
-    <h1>Reset your password</h1>
+<div>
+    <p style="font-size: 1.5rem">Восстановление пароля</p>
     {% if validlink %}
-        <p>Please enter your new password twice:</p>
         <form action="." method="post">
             {{ form.as_p }}
             {% csrf_token %}
-            <p><input type="submit" value="Change my password"/></p>
+            <button type="submit" class="btn btn-outline-success" stule='margin-top: 4rem;'>Изменить пароль</button>
         </form>
     {% else %}
-        <p>The password reset link was invalid, possibly because it has
-            already been used. Please request a new password reset.</p>
+        <p>Ссылка для сброса пароля была недействительной, возможно, потому, 
+            что она уже использовалась. Пожалуйста, запросите сброс нового пароля.
+        </p>
     {% endif %}
+</div>
 {% endblock %}
