--- a/account/templates/registration/password_reset_form.html
+++ b/account/templates/registration/password_reset_form.html
@@ -1,13 +1,13 @@
 {% extends "account/pattern.html" %}
 
-{% block title %}Reset your password{% endblock %}
-
 {% block content %}
-    <h1>Forgotten your password?</h1>
-    <p>Enter your e-mail address to obtain a new password.</p>
-    <form action="." method="post">
-        {{ form.as_p }}
-        <p><input type="submit" value="Send e-mail"></p>
+<div>
+    <p style="font-size: 1.5rem">Восстановление пароля</p>
+    <p>Введите почту привязанную к акканту для получения дальнейших инструкций</p>
+    <form  action="." method="post" style="margin: 0rem;">
+        {{ form.as_p}}
+        <button type="submit" class="btn btn-outline-success" stule='margin-top: 4rem;'>Подтвердить</button>
         {% csrf_token %}
     </form>
+</div>
 {% endblock %}
