--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,15 +1,26 @@
 {% extends "account/pattern.html" %}
 
 {% block content %}
-
     {% if request.user.is_authenticated %}
     <div class="form">
         <div style="background-color: rgb(26, 26, 26); padding: 1vw; border-radius: 1rem;">
-            <form>
-                <p style="margin-bottom: 1.5rem">Привязка Telegram аккаунта</p>
+            <div>
+                <p style="margin-bottom: 1.5rem; font-size: 1.5rem">Привязка Telegram аккаунта</p>
+                <p style="margin-bottom: 1.5rem; font-size: 1rem">
+                    Чтобы привязать аккаунт на сайте к аккаунту телеграма необходимо:
+                </p>
+                <dl>
+                    <dd>1. Перейти по ссылке: <a href="https://web.telegram.org/k/#@Ba1ancedbot">Telegram</a></li>
+                    <dd>2. Написать следующее сообщение: /bind</li>
+                    <dd>3. Когда от бота последует ответ на сообщение нужно отправить ему токен (никому не сообщайте токен)</li>
+                    <dd>4. Токен:<div style="font-size: 0.8rem">{{ token }}</div></li>
+                </dl>
 
-            </form>
-            <p style="margin-bottom: 1.5rem">Вы уже авторизованы</p>
+                <a href="http://127.0.0.1:8000/account/generate-new-token/" style="margin-top: 1rem">
+                    <button style="margin-bottom: 1.5rem" type="button" class="btn btn-outline-warning">Сгенерировать новый токен</button>
+                </a>
+            </div>
+            <p style="margin-bottom: 1.5rem; font-size: 1.5rem">Вы авторизованы</p>
             <a style="margin-bottom: 1.5rem" href='http://127.0.0.1:8000/account/logout/'>
             <button type="button" class="btn btn-outline-danger">Выйти из аккаунта</button>
             </a>
