Add a database with categories
A database with categories was created.
 When you log in to the account, an entry
  will be created in it.

--- a/debit/templates/debit/credit.html
+++ b/debit/templates/debit/credit.html
@@ -4,95 +4,71 @@
 {% block content%}
 {% if request.user.is_authenticated %}
 <div>
-<div class="form" style="border-color: #226f54;">
-    <p style="font-size: 1.5rem;">Создание</p>
-    <label for="startDate" style="margin-bottom: 0.5rem;">Дата</label>
-    <input id="startDate" class="form-control" type="date" />
-    <label for="startDate" style="margin-bottom: 0.5rem; margin-top: 1rem;">Сколько</label>
-    <div class="input-group mb-3">
-        <span class="input-group-text">₽</span>
-        <span class="input-group-text">0.00</span>
-        <input type="text" class="form-control" aria-label="amount">
+    <div class="form" style="border-color: #840032;">
+        <p style="font-size: 1.5rem;">Добавить категорию расходов</p>
+        <input id="startDate" class="form-control" type="text" />
+        <button type="button" class="btn btn-outline-success" style="margin-top: 1rem;">Добавить</button>
     </div>
-    <label for="startDate" style="margin-bottom: 0.5rem;">Категория</label>
-    <select class="form-select" aria-label="Default select example">
-        <option selected>кварплата</option>
-        <option value="1">еда</option>
-        <option value="2">одежда</option>
-        <option value="3">транспорт</option>
-    </select>
-    <button type="button" class="btn btn-outline-success" style="margin-top: 1rem;">Создать запись</button>
-</div>
+    {% if data.categoryRecords %}
+    <div class="form" style="border-color: #226f54;">
+        <p style="font-size: 1.5rem;">Создание</p>
+        <label for="startDate" style="margin-bottom: 0.5rem;">Дата</label>
+        <input id="startDate" class="form-control" type="date" />
+        <label for="startDate" style="margin-bottom: 0.5rem; margin-top: 1rem;">Сколько</label>
+        <div class="input-group mb-3">
+            <span class="input-group-text">₽</span>
+            <span class="input-group-text">0.00</span>
+            <input type="number" class="form-control" aria-label="amount">
+        </div>
+        <label for="startDate" style="margin-bottom: 0.5rem;">Категория</label>
+        <select class="form-select" aria-label="Default select example">
+            <option selected>кварплата</option>
+            <option value="1">еда</option>
+            <option value="2">одежда</option>
+            <option value="3">транспорт</option>
+        </select>
+        <button type="button" class="btn btn-outline-success" style="margin-top: 1rem;">Создать запись</button>
+    </div>
+    {% else%}
+    <div class="form" style="border-color: #226f54;">
+      <p style="font-size: 1rem; color: #fff">Перед созданием записи нужно добавить категории</p>
+  </div>
+    {% endif %}
+    {% if data.debitTableRecords %}
     <div class="form" style="border-color: #FFBA08; height: 300px">
         <p style="font-size: 1.5rem;">Ваши записи</p>
-        <div style="overflow: auto; height: 200px">
-            <ul class="list-group list-group-horizontal">
-                <li class="list-group-item" style="width: 35%;">39</li>
-                <li class="list-group-item" style="width: 35%;">21.04.2023</li>
-                <li class="list-group-item" style="width: 35%;">32120.00</li>
-                <li class="list-group-item" style="width: 35%;">кварплата</li>
-            </ul>
-            <ul class="list-group list-group-horizontal-sm">
-                <li class="list-group-item" style="width: 1fr;">39</li>
-                <li class="list-group-item" style="width: 1fr;">21.04.2023</li>
-                <li class="list-group-item" style="width: 1fr;">323120.00</li>
-                <li class="list-group-item" style="width: 1fr;">еда</li>
-            </ul>
-            <ul class="list-group list-group-horizontal-md">
-                <li class="list-group-item" style="width: 35%;">39</li>
-                <li class="list-group-item" style="width: 35%;">21.04.2023</li>
-                <li class="list-group-item" style="width: 35%;">3232120.00</li>
-                <li class="list-group-item" style="width: 35%;">одежда</li>
-            </ul>
-            <ul class="list-group list-group-horizontal">
-                <li class="list-group-item" style="width: 35%;">39</li>
-                <li class="list-group-item" style="width: 35%;">21.04.2023</li>
-                <li class="list-group-item" style="width: 35%;">32120.00</li>
-                <li class="list-group-item" style="width: 35%;">транспорт</li>
-            </ul>
-            <ul class="list-group list-group-horizontal-sm">
-                <li class="list-group-item" style="width: 35%;">39</li>
-                <li class="list-group-item" style="width: 35%;">21.04.2023</li>
-                <li class="list-group-item" style="width: 35%;">323120.00</li>
-                <li class="list-group-item" style="width: 35%;">еда</li>
-            </ul>
-            <ul class="list-group list-group-horizontal-md">
-                <li class="list-group-item" style="width: 35%;">39</li>
-                <li class="list-group-item" style="width: 35%;">21.04.2023</li>
-                <li class="list-group-item" style="width: 35%;">3232120.00</li>
-                <li class="list-group-item" style="width: 35%;">развлечения</li>
-            </ul>
-            <ul class="list-group list-group-horizontal-sm">
-                <li class="list-group-item" style="width: 35%;">39</li>
-                <li class="list-group-item" style="width: 35%;">21.04.2023</li>
-                <li class="list-group-item" style="width: 35%;">323120.00</li>
-                <li class="list-group-item" style="width: 35%;">инвестиции</li>
-            </ul>
-            <ul class="list-group list-group-horizontal-md">
-                <li class="list-group-item" style="width: 35%;">39</li>
-                <li class="list-group-item" style="width: 35%;">21.04.2023</li>
-                <li class="list-group-item" style="width: 35%;">3232120.00</li>
-                <li class="list-group-item" style="width: 35%;">еда</li>
-            </ul>
-            <ul class="list-group list-group-horizontal">
-                <li class="list-group-item" style="width: 35%;">39</li>
-                <li class="list-group-item" style="width: 35%;">21.04.2023</li>
-                <li class="list-group-item" style="width: 35%;">32120.00</li>
-                <li class="list-group-item" style="width: 35%;">транспорт</li>
-            </ul>
-            <ul class="list-group list-group-horizontal-sm">
-                <li class="list-group-item" style="width: 35%;">40</li>
-                <li class="list-group-item" style="width: 35%;">21.04.2023</li>
-                <li class="list-group-item" style="width: 35%;">323120.00</li>
-                <li class="list-group-item" style="width: 35%;">развлечения</li>
-            </ul>
-            <ul class="list-group list-group-horizontal-md">
-                <li class="list-group-item" style="width: 35%;">41</li>
-                <li class="list-group-item" style="width: 35%;">21.04.2023</li>
-                <li class="list-group-item" style="width: 35%;">3232120.00</li>
-                <li class="list-group-item" style="width: 35%;">транспорт</li>
-            </ul>
-        </div>
+        <div class="table-responsive" style="overflow: auto; height: 200px; border-radius: 1rem">
+            <table class="table table-dark", style="background-color: #1a1a1a">
+                <thead class="table-dark">
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">дата</th>
+                    <th scope="col">сумма</th>
+                    <th scope="col">категория</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>11.02.2012</td>
+                    <td>202310,21</td>
+                    <td>зарплата</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>11.02.2012</td>
+                    <td>202310,21</td>
+                    <td>зарплата</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td>11.02.2012</td>
+                    <td>202310,21</td>
+                    <td>зарплата</td>
+                  </tr>
+                </tbody>
+              </table> 
+          </div>
     </div>
     <div class="form" style="border-color: #D00000;">
         <p style="font-size: 1.5rem;">Удаление</p>
@@ -104,7 +80,9 @@
             <button type="submit" class="btn btn-outline-danger">Удалить</button>
         </form>
     </div>
-<div>
+    </div>
+</div>
+  {% endif %}
     {% else %}
     <div style="padding: 6rem">
         <p >Перед тем, как начать пользоваться войдите в аккаунт </p>
