--- a/debit/static/css/debit.css
+++ b/debit/static/css/debit.css
@@ -38,13 +38,14 @@ body {
     width: 100%;    
 }
 
+
 .list-group-item {
     width: 33%;
 }
 
 
 .content>div {
-    background-color: rgb(26, 26, 26);
+    background-color: #1a1a1a;
     grid-column: 2/3;
     height: 110%;
     border-radius: 1rem;
