--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -40,7 +40,7 @@
         <p>
             Перед началом пользования нужно зарегистрироваться.
         </p>
-        <a href="entrance.html" style="color: #fff; text-decoration: none;">
+        <a href="http://127.0.0.1:8000/account/login" style="color: #fff; text-decoration: none;">
             <button type="button" class="btn btn-outline-success">Начать</button>
         </a>
     </div>
