Add a record deletion function
Added a form in html. The function оf deleting
a record from the database has been created.
TODO: user statistics output

--- a/debit/static/css/debit.css
+++ b/debit/static/css/debit.css
@@ -54,6 +54,10 @@ body {
     overflow: auto;
 }
 
+.table-dark{
+    --bs-table-bg: #000;
+}
+
 .form {
     background-color: #000;
     border: solid;
