--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -43,13 +43,13 @@
             </div>
             <div style="margin-top: 1rem">
                 <a href="http://127.0.0.1:8000/account/registration/" style="margin-top: 1rem">
-                    <button type="button" class="btn btn-outline-light">Регистрация</button>
+                    <button type="button" class="btn btn-outline-secondary">Регистрация</button>
                 </a>
             </div>
             <p style="margin-top: 0.5rem; color: {% if data == 'Успешно' %} #38b000  {% else %} #ba181b{% endif %}"> {{data}}</p>
         </form>
         <a href="{% url "password_reset" %}" style="margin-top: 1rem">
-            <button type="button" class="btn btn-outline-warning">Восстановить пароль</button>
+            <button type="button" class="btn btn-outline-secondary">Восстановить пароль</button>
         </a>
     {% endif %}
 {% endblock content%}
