--- a/account/templates/account/registr.html
+++ b/account/templates/account/registr.html
@@ -21,7 +21,7 @@
             <label for="exampleInputPassword1" class="form-label">Повторите пароль</label>
             {{ user_form.password2 }}
         </div>
-        <button type="submit" class="btn btn btn-success">Подтвердить</button>
+        <button type="submit" class="btn btn-outline-success">Подтвердить</button>
         <p style="margin-top: 0.5rem; color: {% if data == 'Регистрация прошла успешно' %} #38b000  {% else %} #ba181b{% endif %}"> {{data}}</p>
     </form>
 </div>
