Add statistics output as a graph
A view has been created for rendering
a page with graphs of income and
expense by month. TODO: output histograms
and period changes (1 month, 1 week, 1 day)

--- a/user_stat/templates/user_stat/pattern.html
+++ b/user_stat/templates/user_stat/pattern.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="http://127.0.0.1:8000/" {% block page1 %}{% endblock page1%}>Balanced</a>
@@ -55,6 +56,5 @@
         integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
-    <script src="{% static 'script/script.js' %}"></script>
 </body>
 </html>
