--- a/user_stat/static/css/statistics.css
+++ b/user_stat/static/css/statistics.css
@@ -17,7 +17,10 @@ body {
     width: 3px;
     background-color: #000;}
 
-
+.button-link{
+    margin-right: 0rem;
+    text-decoration: none;
+}
 
 .select {
     text-decoration: underline;
