--- a/user_stat/templates/user_stat/stat.html
+++ b/user_stat/templates/user_stat/stat.html
@@ -3,15 +3,35 @@
 {% block content%}
 {% if request.user.is_authenticated %}
     <div>
-        <div class="form" style="border-color: #FFBA08;">
-
+        <div style="margin-left: 1rem; margin-bottom: 1rem;">
+            <a class='button-link' href='#'>
+                <button type="button" class="btn btn-outline-secondary">1 месяц</button>
+            </a>
+            <a class='button-link' href='#'>
+                <button type="button" class="btn btn-outline-secondary">1 неделя</button>
+            </a>
+          
+            <a class='button-link' href='#'>
+                <button type="button" class="btn btn-outline-secondary">1 день</button>
+            </a>          
         </div>
-        <div class="form" style="border-color: #136F63">
-
+        <div class="form" style="border-color: #FFBA08;">
+            <canvas id="Chart_4" style="width:100%;max-width:600px"></canvas>
+            <p>В среднем расходы за период: {{ median_credit }} </p>
+        </div>
+        <div class="form" style="border-color: #FFBA08;">
+            <canvas id="Chart_3" style="width:100%;max-width:600px"></canvas>
+            <p>В среднем доходы за период: {{ median_debit }}</p>
+        </div>
+        <div class="form" style="border-color: #136F63;">
+            <canvas id="Chart_1" style="width:100%;max-width:600px"></canvas>
         </div>
         <div class="form" style="border-color: #3772FF; background-color: #000">
-            <canvas id="myChart" width="400" height="300"></canvas>
+            <canvas id="Chart_2" style="width:100%;max-width:600px"></canvas>
+
         </div>
+        {% block script_debit %}
+        {% endblock script_debit %}
     </div>
     {% else %}
     <div style="padding: 6rem">
