--- a/user_stat/templates/user_stat/script.html
+++ b/user_stat/templates/user_stat/script.html
@@ -9,38 +9,23 @@
     const yValues = [55, 49, 44, 24, 15];
     const barColors = ["red", "green","blue","orange","brown"];
 
-    let creditData = [];
-    let creditlabels = [];
-    let debitlabels = [];
-    let debitData = [];
-    let debitHistCategory = [];
-    let debitHistAmount = [];
-    let creditHistCategory = [];
-    let creditHistAmount = [];
+    let creditData = [{% for el in credit_dict.amount %}{{el}},{% endfor %}];
+    let creditlabels = [{% for el in credit_dict.month %}{{el}},{% endfor %}];
+    let debitlabels = [{% for el in debit_dict.month %}{{el}},{% endfor %}];
+    let debitData = [{% for el in debit_dict.amount %}{{el}},{% endfor %}];
+    let debitHistCategory = [{% for el in hist_debit.category %}'{{el}}',{% endfor %}];
+    let debitHistAmount = [{% for el in hist_debit.amount %}{{el}},{% endfor %}];
+    let creditHistCategory = [{% for el in hist_credit.category %}'{{el}}',{% endfor %}];
+    let creditHistAmount = [{% for el in hist_credit.amount %}{{el}},{% endfor %}];
 
-    {% for el in debit_dict.amount %}
-        debitData.push({{el}});
-    {% endfor %}
-
-    {% for el in debit_dict.month %}
-        debitlabels.push({{el}});
-    {% endfor %}
-
-    {% for el in credit_dict.amount %}
-        creditData.push({{el}});
-    {% endfor %}
-
-    {% for el in credit_dict.month %}
-        creditlabels.push({{el}});
-    {% endfor %}
 
     new Chart("Chart_1", {
     type: 'doughnut',
     data: {
-        labels: ['П', 'е', 'д', 'ик'],
+        labels: debitHistCategory,
         datasets: [{
-            data: [1, 1, 1, 2],
-            backgroundColor: ['#D00000', '#FFBA08', '#136F63', '#3772FF'],
+            data: debitHistAmount,
+            backgroundColor: ['#F72585', '#B5179E', '#7209B7', '#560BAD', '#480CA8', '#3A0CA3', '#3F37C9', '#4895EF', '#4CC9F0'],
             borderWidth: 5 ,
             borderColor: '#000'
         }]
@@ -83,10 +68,10 @@
 new Chart("Chart_2", {
     type: 'doughnut',
     data: {
-        labels: ['П', '1', '2', '3'],
+        labels: creditHistCategory,
         datasets: [{
-            data: [1.3, 0.5, 2, 2],
-            backgroundColor: ['#D00000', '#FFBA08', '#136F63', '#3772FF'],
+            data: creditHistAmount,
+            backgroundColor: ['#F72585', '#B5179E', '#7209B7', '#560BAD', '#480CA8', '#3A0CA3', '#3F37C9', '#4895EF', '#4CC9F0'],
             borderWidth: 5 ,
             borderColor: '#000'
         }]
@@ -94,7 +79,7 @@ new Chart("Chart_2", {
     options: {
         title: {
             display: true,
-            text: 'Доходы',
+            text: 'Расходы',
             position: 'top',
             fontSize: 16,
             fontColor: '#fff',
