--- a/user_stat/templates/user_stat/stat.html
+++ b/user_stat/templates/user_stat/stat.html
@@ -4,10 +4,10 @@
 {% if request.user.is_authenticated %}
     <div>
         <div style="margin-left: 1rem; margin-bottom: 1rem;">
-            <a class='button-link' href='#'>
+            <a class='button-link' href='http://127.0.0.1:8000/statistics/month'>
                 <button type="button" class="btn btn-outline-secondary">1 месяц</button>
             </a>
-            <a class='button-link' href='#'>
+            <a class='button-link' href='http://127.0.0.1:8000/statistics/week'>
                 <button type="button" class="btn btn-outline-secondary">1 неделя</button>
             </a>
           
@@ -23,12 +23,13 @@
             <canvas id="Chart_3" style="width:100%;max-width:600px"></canvas>
             <p>В среднем доходы за период: {{ median_debit }}</p>
         </div>
-        <div class="form" style="border-color: #136F63;">
-            <canvas id="Chart_1" style="width:100%;max-width:600px"></canvas>
-        </div>
-        <div class="form" style="border-color: #3772FF; background-color: #000">
-            <canvas id="Chart_2" style="width:100%;max-width:600px"></canvas>
-
+        <div class="twocol">
+            <div class="form" style="border-color: #136F63;">
+                <canvas id="Chart_1" style="width:100%;max-width:600px"></canvas>
+            </div>
+            <div class="form" style="border-color: #3772FF; background-color: #000">
+                <canvas id="Chart_2" style="width:100%;max-width:600px"></canvas>
+            </div>
         </div>
         {% block script_debit %}
         {% endblock script_debit %}
