Add ability to create records from other sources
The id field has been changed in the database with
user records on income and expenses. Now you can
create your own records from the console

--- a/account/templates/registration/password_reset_email.html
+++ b/account/templates/registration/password_reset_email.html
@@ -1,3 +1,7 @@
-Someone asked for password reset for email {{ email }}. Follow thelink below:
+Сброс пароля для электронной почты  {{ email }}. 
+
+Пройдите по ссылке для восстановления пароля:
 {{ protocol }}://{{ domain }}{% url "password_reset_confirm" uidb64=uid token=token %}
-Your username, in case you've forgotten: {{ user.get_username }}
+Ваш логин, если вы его забыли: {{ user.get_username }}
+
+Если это не вы запросили восстановление пароля, то проигнорируйте это сообщение.
